# deadbeef-plugins-fc

./: Makefile.am  README.md  configure.ac  fcdec.c
